--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 
 /* side cart body  */
 .wscart-side-cart-body{
-    position: absolute;
+    position: fixed;
     background: #003049;
     width: 350px;
     /* height: 80vh; */
     top:100px; 
-    right:0;
-    /* right: -700px; */
+    /* right:0; */
+    right: -700px;
     z-index: 999;
     transition: right .5s ease-in-out;
     padding: 10px 10px 0 10px;
@@ -15,12 +15,33 @@
 }
 
 /* cart item title  */
+
+.wscart-topbar {
+    display: flex;
+    align-items: center;
+    
+}
+
+
 .wscart-title{
     padding: 10px 0;
     text-align: center;
     color: #fff;
     font-size: 16px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.wscart-close {
+    display: flex;
+    width: 30px;
+    padding: 5px;
+    background: #fdf0d5;
+    color: #003049;
+    border-radius: 3px;
+    height: 30px;
     align-items: center;
     justify-content: center;
 }
@@ -102,14 +123,14 @@
 
 
 td.item_image_ws {
-    width: 40px;
-    max-height: 40px;
+    width: 50px;
+    max-height: 50px;
     
 }
 
 td.item_image_ws img {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     border-radius: 5px;
 }
 
