Cart Icon Option Added

--- a/admin/assets/css/admin-css.css
+++ b/admin/assets/css/admin-css.css
@@ -190,6 +190,12 @@
     padding: 0 !important;
 } */
 
+.cart-icons-area {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
 .ws-button{
     padding: 10px 30px;
     color: #ffffff;
