--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     background: #003049;
     width: 350px;
     /* height: 80vh; */
-    top:100px; 
+    top:32px; 
     /* right:0; */
     right: -700px;
     z-index: 999;
@@ -66,6 +66,11 @@
     font-weight: 600;
 }
 
+.cart-items-area{
+    height: 300px; 
+    overflow-y: scroll; 
+}
+
 
 
 /* cart buttons   */
@@ -76,17 +81,18 @@
     margin-top: 10px;
 }
 .ws-button{
-    background-color: rgb(240, 225, 185);
+    background-color: #ffffff;
     padding: 10px 25px;
     border-radius: 5px;
-    color: #000; 
+    color: #003049; 
+    border: 1px solid #ffffff;
     margin-bottom: 10px;
-   text-align: center;
-   text-decoration: none;
+    text-align: center;
+    text-decoration: none;
 }
 
 .ws-button:hover{
-   color: #49b4ed; 
+   color: #003049; 
 }
 
 
@@ -212,6 +218,6 @@ input.item_quantity_ws {
 /* cart coupon   */
 
 .kartly-coupon{
-    display: flex;
+    display: none;
 }
 
